<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="G_ActuatorLimits" Id="{0abcacc0-2e2e-4eb1-80a2-58008d02d9e7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fq1Min: LREAL := -1.3;//rad
	fq1Max: LREAL := 1.3;//rad
	fq2Min: LREAL := -1.2;//rad 
	fq2Max: LREAL := 0.65;//rad
	fq3Min: LREAL := 0.15;//rad
	fq3Max: LREAL := 2.5;//rad
	fq4Min: LREAL := 0.0100;//m
	fq4Max: LREAL := 0.1900;//m

	bq1Min: BOOL;  // reached or not
	bq1Max: BOOL;
	bq2Min: BOOL;
	bq2Max: BOOL;
	bq3Min:	BOOL;
	bq3Max: BOOL;
	bq4Min: BOOL;
	bq4Max: BOOL;
	
	// Meassured in crane coordinates with tilt (theta = 0):
	fZMin : LREAL := -0.0500; //m 
	fZMax : LREAL := 0.4000;
	fYMin : LREAL := -0.25;
	fYMax : LREAL := 0.25;
	fXMax : LREAL := 0.45;
	fXMin : LREAL := 0.133;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>